Add Go and Python bindings with CLI distribution and version synchronization